--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English poetry -- 20th century'
+- GITenberg
 title: The Story of a Round-House, and Other Poems
 url: http://www.gutenberg.org/ebooks/40717
